// See Makefile for the logic that generates this
// Protoc errors imply this file is being generated incorrectly
// Swift compile errors are probably bugs in protoc-gen-swift
syntax = "proto3";
package swift_proto_testing.generated;
enum GeneratedSwiftReservedEnum {
  NONE = 0;
  adjusted = 1;
  aggregateValue = 2;
  allCases = 3;
  allowAlias = 4;
  alwaysPrintEnumsAsInts = 5;
  alwaysPrintFieldsWithoutPresence = 6;
  alwaysPrintInt64sAsNumbers = 7;
  alwaysVisitPrimitiveFields = 8;
  annotation = 9;
  any = 10;
  AnyExtensionField = 11;
  AnyMessageExtension = 12;
  AnyMessageStorage = 13;
  AnyUnpackError = 14;
  Api = 15;
  appended = 16;
  appendUIntHex = 17;
  appendUnknown = 18;
  areAllInitialized = 19;
  Array = 20;
  arrayDepth = 21;
  arrayLiteral = 22;
  arraySeparator = 23;
  as = 24;
  asciiOpenCurlyBracket = 25;
  asciiZero = 26;
  async = 27;
  AsyncIterator = 28;
  AsyncIteratorProtocol = 29;
  AsyncMessageSequence = 30;
  available = 31;
  b = 32;
  Base = 33;
  base64Values = 34;
  baseAddress = 35;
  BaseType = 36;
  begin = 37;
  binary = 38;
  BinaryDecoder = 39;
  BinaryDecodingError = 40;
  BinaryDecodingOptions = 41;
  BinaryDelimited = 42;
  BinaryEncoder = 43;
  BinaryEncodingError = 44;
  BinaryEncodingMessageSetSizeVisitor = 45;
  BinaryEncodingMessageSetVisitor = 46;
  BinaryEncodingOptions = 47;
  BinaryEncodingSizeVisitor = 48;
  BinaryEncodingVisitor = 49;
  binaryOptions = 50;
  binaryProtobufDelimitedMessages = 51;
  bitPattern = 52;
  body = 53;
  Bool = 54;
  booleanLiteral = 55;
  BooleanLiteralType = 56;
  boolValue = 57;
  buffer = 58;
  bytes = 59;
  bytesInGroup = 60;
  bytesNeeded = 61;
  bytesRead = 62;
  BytesValue = 63;
  c = 64;
  capitalizeNext = 65;
  cardinality = 66;
  CaseIterable = 67;
  ccEnableArenas = 68;
  ccGenericServices = 69;
  Character = 70;
  chars = 71;
  chunk = 72;
  class = 73;
  clearAggregateValue = 74;
  clearAllowAlias = 75;
  clearBegin = 76;
  clearCcEnableArenas = 77;
  clearCcGenericServices = 78;
  clearClientStreaming = 79;
  clearCsharpNamespace = 80;
  clearCtype = 81;
  clearDebugRedact = 82;
  clearDefaultValue = 83;
  clearDeprecated = 84;
  clearDeprecatedLegacyJsonFieldConflicts = 85;
  clearDoubleValue = 86;
  clearEdition = 87;
  clearEnd = 88;
  clearEnumType = 89;
  clearExtendee = 90;
  clearExtensionValue = 91;
  clearFeatures = 92;
  clearFieldPresence = 93;
  clearFullName = 94;
  clearGoPackage = 95;
  clearIdempotencyLevel = 96;
  clearIdentifierValue = 97;
  clearInputType = 98;
  clearIsExtension = 99;
  clearJavaGenerateEqualsAndHash = 100;
  clearJavaGenericServices = 101;
  clearJavaMultipleFiles = 102;
  clearJavaOuterClassname = 103;
  clearJavaPackage = 104;
  clearJavaStringCheckUtf8 = 105;
  clearJsonFormat = 106;
  clearJsonName = 107;
  clearJstype = 108;
  clearLabel = 109;
  clearLazy = 110;
  clearLeadingComments = 111;
  clearMapEntry = 112;
  clearMaximumEdition = 113;
  clearMessageEncoding = 114;
  clearMessageSetWireFormat = 115;
  clearMinimumEdition = 116;
  clearName = 117;
  clearNamePart = 118;
  clearNegativeIntValue = 119;
  clearNoStandardDescriptorAccessor = 120;
  clearNumber = 121;
  clearObjcClassPrefix = 122;
  clearOneofIndex = 123;
  clearOptimizeFor = 124;
  clearOptions = 125;
  clearOutputType = 126;
  clearPackage = 127;
  clearPacked = 128;
  clearPhpClassPrefix = 129;
  clearPhpMetadataNamespace = 130;
  clearPhpNamespace = 131;
  clearPositiveIntValue = 132;
  clearProto3Optional = 133;
  clearPyGenericServices = 134;
  clearRepeated = 135;
  clearRepeatedFieldEncoding = 136;
  clearReserved = 137;
  clearRetention = 138;
  clearRubyPackage = 139;
  clearSemantic = 140;
  clearServerStreaming = 141;
  clearSourceCodeInfo = 142;
  clearSourceContext = 143;
  clearSourceFile = 144;
  clearStart = 145;
  clearStringValue = 146;
  clearSwiftPrefix = 147;
  clearSyntax = 148;
  clearTrailingComments = 149;
  clearType = 150;
  clearTypeName = 151;
  clearUnverifiedLazy = 152;
  clearUtf8Validation = 153;
  clearValue = 154;
  clearVerification = 155;
  clearWeak = 156;
  clientStreaming = 157;
  codePoint = 158;
  codeUnits = 159;
  Collection = 160;
  com = 161;
  comma = 162;
  CommonMessageConformances = 163;
  consumedBytes = 164;
  contentsOf = 165;
  count = 166;
  countVarintsInBuffer = 167;
  csharpNamespace = 168;
  ctype = 169;
  customCodable = 170;
  d = 171;
  Data = 172;
  dataResult = 173;
  date = 174;
  daySec = 175;
  daysSinceEpoch = 176;
  debugDescription = 177;
  debugRedact = 178;
  declaration = 179;
  decoded = 180;
  decodedFromJSONNull = 181;
  decodeExtensionField = 182;
  decodeExtensionFieldsAsMessageSet = 183;
  decodeJSON = 184;
  decodeMapField = 185;
  decodeMessage = 186;
  decoder = 187;
  decodeRepeated = 188;
  decodeRepeatedBoolField = 189;
  decodeRepeatedBytesField = 190;
  decodeRepeatedDoubleField = 191;
  decodeRepeatedEnumField = 192;
  decodeRepeatedFixed32Field = 193;
  decodeRepeatedFixed64Field = 194;
  decodeRepeatedFloatField = 195;
  decodeRepeatedGroupField = 196;
  decodeRepeatedInt32Field = 197;
  decodeRepeatedInt64Field = 198;
  decodeRepeatedMessageField = 199;
  decodeRepeatedSFixed32Field = 200;
  decodeRepeatedSFixed64Field = 201;
  decodeRepeatedSInt32Field = 202;
  decodeRepeatedSInt64Field = 203;
  decodeRepeatedStringField = 204;
  decodeRepeatedUInt32Field = 205;
  decodeRepeatedUInt64Field = 206;
  decodeSingular = 207;
  decodeSingularBoolField = 208;
  decodeSingularBytesField = 209;
  decodeSingularDoubleField = 210;
  decodeSingularEnumField = 211;
  decodeSingularFixed32Field = 212;
  decodeSingularFixed64Field = 213;
  decodeSingularFloatField = 214;
  decodeSingularGroupField = 215;
  decodeSingularInt32Field = 216;
  decodeSingularInt64Field = 217;
  decodeSingularMessageField = 218;
  decodeSingularSFixed32Field = 219;
  decodeSingularSFixed64Field = 220;
  decodeSingularSInt32Field = 221;
  decodeSingularSInt64Field = 222;
  decodeSingularStringField = 223;
  decodeSingularUInt32Field = 224;
  decodeSingularUInt64Field = 225;
  decodeTextFormat = 226;
  defaultAnyTypeURLPrefix = 227;
  defaults = 228;
  defaultValue = 229;
  dependency = 230;
  deprecated = 231;
  deprecatedLegacyJsonFieldConflicts = 232;
  description = 233;
  DescriptorProto = 234;
  Dictionary = 235;
  dictionaryLiteral = 236;
  digit = 237;
  digit0 = 238;
  digit1 = 239;
  digitCount = 240;
  digits = 241;
  digitValue = 242;
  discardableResult = 243;
  discardUnknownFields = 244;
  Double = 245;
  doubleValue = 246;
  Duration = 247;
  E = 248;
  edition = 249;
  EditionDefault = 250;
  editionDefaults = 251;
  Element = 252;
  elements = 253;
  emitExtensionFieldName = 254;
  emitFieldName = 255;
  emitFieldNumber = 256;
  Empty = 257;
  encodeAsBytes = 258;
  encoded = 259;
  encodedJSONString = 260;
  encodedSize = 261;
  encodeField = 262;
  encoder = 263;
  end = 264;
  endArray = 265;
  endMessageField = 266;
  endObject = 267;
  endRegularField = 268;
  enum = 269;
  EnumDescriptorProto = 270;
  EnumOptions = 271;
  EnumReservedRange = 272;
  enumType = 273;
  enumvalue = 274;
  EnumValueDescriptorProto = 275;
  EnumValueOptions = 276;
  Equatable = 277;
  Error = 278;
  ExpressibleByArrayLiteral = 279;
  ExpressibleByDictionaryLiteral = 280;
  ext = 281;
  extDecoder = 282;
  extendedGraphemeClusterLiteral = 283;
  ExtendedGraphemeClusterLiteralType = 284;
  extendee = 285;
  ExtensibleMessage = 286;
  extension = 287;
  ExtensionField = 288;
  extensionFieldNumber = 289;
  ExtensionFieldValueSet = 290;
  ExtensionMap = 291;
  extensionRange = 292;
  ExtensionRangeOptions = 293;
  extensions = 294;
  extras = 295;
  F = 296;
  false = 297;
  features = 298;
  FeatureSet = 299;
  FeatureSetDefaults = 300;
  FeatureSetEditionDefault = 301;
  field = 302;
  fieldData = 303;
  FieldDescriptorProto = 304;
  FieldMask = 305;
  fieldName = 306;
  fieldNameCount = 307;
  fieldNum = 308;
  fieldNumber = 309;
  fieldNumberForProto = 310;
  FieldOptions = 311;
  fieldPresence = 312;
  fields = 313;
  fieldSize = 314;
  FieldTag = 315;
  fieldType = 316;
  file = 317;
  FileDescriptorProto = 318;
  FileDescriptorSet = 319;
  fileName = 320;
  FileOptions = 321;
  filter = 322;
  final = 323;
  first = 324;
  firstItem = 325;
  Float = 326;
  floatLiteral = 327;
  FloatLiteralType = 328;
  FloatValue = 329;
  forMessageName = 330;
  formUnion = 331;
  forReadingFrom = 332;
  forTypeURL = 333;
  ForwardParser = 334;
  forWritingInto = 335;
  from = 336;
  fromAscii2 = 337;
  fromAscii4 = 338;
  fromByteOffset = 339;
  fromHexDigit = 340;
  fullName = 341;
  func = 342;
  G = 343;
  GeneratedCodeInfo = 344;
  get = 345;
  getExtensionValue = 346;
  googleapis = 347;
  Google_Protobuf_Any = 348;
  Google_Protobuf_Api = 349;
  Google_Protobuf_BoolValue = 350;
  Google_Protobuf_BytesValue = 351;
  Google_Protobuf_DescriptorProto = 352;
  Google_Protobuf_DoubleValue = 353;
  Google_Protobuf_Duration = 354;
  Google_Protobuf_Edition = 355;
  Google_Protobuf_Empty = 356;
  Google_Protobuf_Enum = 357;
  Google_Protobuf_EnumDescriptorProto = 358;
  Google_Protobuf_EnumOptions = 359;
  Google_Protobuf_EnumValue = 360;
  Google_Protobuf_EnumValueDescriptorProto = 361;
  Google_Protobuf_EnumValueOptions = 362;
  Google_Protobuf_ExtensionRangeOptions = 363;
  Google_Protobuf_FeatureSet = 364;
  Google_Protobuf_FeatureSetDefaults = 365;
  Google_Protobuf_Field = 366;
  Google_Protobuf_FieldDescriptorProto = 367;
  Google_Protobuf_FieldMask = 368;
  Google_Protobuf_FieldOptions = 369;
  Google_Protobuf_FileDescriptorProto = 370;
  Google_Protobuf_FileDescriptorSet = 371;
  Google_Protobuf_FileOptions = 372;
  Google_Protobuf_FloatValue = 373;
  Google_Protobuf_GeneratedCodeInfo = 374;
  Google_Protobuf_Int32Value = 375;
  Google_Protobuf_Int64Value = 376;
  Google_Protobuf_ListValue = 377;
  Google_Protobuf_MessageOptions = 378;
  Google_Protobuf_Method = 379;
  Google_Protobuf_MethodDescriptorProto = 380;
  Google_Protobuf_MethodOptions = 381;
  Google_Protobuf_Mixin = 382;
  Google_Protobuf_NullValue = 383;
  Google_Protobuf_OneofDescriptorProto = 384;
  Google_Protobuf_OneofOptions = 385;
  Google_Protobuf_Option = 386;
  Google_Protobuf_ServiceDescriptorProto = 387;
  Google_Protobuf_ServiceOptions = 388;
  Google_Protobuf_SourceCodeInfo = 389;
  Google_Protobuf_SourceContext = 390;
  Google_Protobuf_StringValue = 391;
  Google_Protobuf_Struct = 392;
  Google_Protobuf_Syntax = 393;
  Google_Protobuf_Timestamp = 394;
  Google_Protobuf_Type = 395;
  Google_Protobuf_UInt32Value = 396;
  Google_Protobuf_UInt64Value = 397;
  Google_Protobuf_UninterpretedOption = 398;
  Google_Protobuf_Value = 399;
  goPackage = 400;
  group = 401;
  groupFieldNumberStack = 402;
  groupSize = 403;
  hadOneofValue = 404;
  handleConflictingOneOf = 405;
  hasAggregateValue = 406;
  hasAllowAlias = 407;
  hasBegin = 408;
  hasCcEnableArenas = 409;
  hasCcGenericServices = 410;
  hasClientStreaming = 411;
  hasCsharpNamespace = 412;
  hasCtype = 413;
  hasDebugRedact = 414;
  hasDefaultValue = 415;
  hasDeprecated = 416;
  hasDeprecatedLegacyJsonFieldConflicts = 417;
  hasDoubleValue = 418;
  hasEdition = 419;
  hasEnd = 420;
  hasEnumType = 421;
  hasExtendee = 422;
  hasExtensionValue = 423;
  hasFeatures = 424;
  hasFieldPresence = 425;
  hasFullName = 426;
  hasGoPackage = 427;
  hash = 428;
  Hashable = 429;
  hasher = 430;
  HashVisitor = 431;
  hasIdempotencyLevel = 432;
  hasIdentifierValue = 433;
  hasInputType = 434;
  hasIsExtension = 435;
  hasJavaGenerateEqualsAndHash = 436;
  hasJavaGenericServices = 437;
  hasJavaMultipleFiles = 438;
  hasJavaOuterClassname = 439;
  hasJavaPackage = 440;
  hasJavaStringCheckUtf8 = 441;
  hasJsonFormat = 442;
  hasJsonName = 443;
  hasJstype = 444;
  hasLabel = 445;
  hasLazy = 446;
  hasLeadingComments = 447;
  hasMapEntry = 448;
  hasMaximumEdition = 449;
  hasMessageEncoding = 450;
  hasMessageSetWireFormat = 451;
  hasMinimumEdition = 452;
  hasName = 453;
  hasNamePart = 454;
  hasNegativeIntValue = 455;
  hasNoStandardDescriptorAccessor = 456;
  hasNumber = 457;
  hasObjcClassPrefix = 458;
  hasOneofIndex = 459;
  hasOptimizeFor = 460;
  hasOptions = 461;
  hasOutputType = 462;
  hasPackage = 463;
  hasPacked = 464;
  hasPhpClassPrefix = 465;
  hasPhpMetadataNamespace = 466;
  hasPhpNamespace = 467;
  hasPositiveIntValue = 468;
  hasProto3Optional = 469;
  hasPyGenericServices = 470;
  hasRepeated = 471;
  hasRepeatedFieldEncoding = 472;
  hasReserved = 473;
  hasRetention = 474;
  hasRubyPackage = 475;
  hasSemantic = 476;
  hasServerStreaming = 477;
  hasSourceCodeInfo = 478;
  hasSourceContext = 479;
  hasSourceFile = 480;
  hasStart = 481;
  hasStringValue = 482;
  hasSwiftPrefix = 483;
  hasSyntax = 484;
  hasTrailingComments = 485;
  hasType = 486;
  hasTypeName = 487;
  hasUnverifiedLazy = 488;
  hasUtf8Validation = 489;
  hasValue = 490;
  hasVerification = 491;
  hasWeak = 492;
  hour = 493;
  i = 494;
  idempotencyLevel = 495;
  identifierValue = 496;
  if = 497;
  ignoreUnknownFields = 498;
  index = 499;
  init = 500;
  inout = 501;
  inputType = 502;
  insert = 503;
  Int = 504;
  Int32 = 505;
  Int32Value = 506;
  Int64 = 507;
  Int64Value = 508;
  Int8 = 509;
  integerLiteral = 510;
  IntegerLiteralType = 511;
  intern = 512;
  Internal = 513;
  InternalState = 514;
  into = 515;
  ints = 516;
  isA = 517;
  isEqual = 518;
  isEqualTo = 519;
  isExtension = 520;
  isInitialized = 521;
  isNegative = 522;
  itemTagsEncodedSize = 523;
  iterator = 524;
  javaGenerateEqualsAndHash = 525;
  javaGenericServices = 526;
  javaMultipleFiles = 527;
  javaOuterClassname = 528;
  javaPackage = 529;
  javaStringCheckUtf8 = 530;
  JSONDecoder = 531;
  JSONDecodingError = 532;
  JSONDecodingOptions = 533;
  jsonEncoder = 534;
  JSONEncodingError = 535;
  JSONEncodingOptions = 536;
  JSONEncodingVisitor = 537;
  jsonFormat = 538;
  JSONMapEncodingVisitor = 539;
  jsonName = 540;
  jsonPath = 541;
  jsonPaths = 542;
  JSONScanner = 543;
  jsonString = 544;
  jsonText = 545;
  jsonUTF8Bytes = 546;
  jsonUTF8Data = 547;
  jstype = 548;
  k = 549;
  kChunkSize = 550;
  Key = 551;
  keyField = 552;
  keyFieldOpt = 553;
  KeyType = 554;
  kind = 555;
  l = 556;
  label = 557;
  lazy = 558;
  leadingComments = 559;
  leadingDetachedComments = 560;
  length = 561;
  lessThan = 562;
  let = 563;
  lhs = 564;
  list = 565;
  listOfMessages = 566;
  listValue = 567;
  littleEndian = 568;
  littleEndianBytes = 569;
  load = 570;
  localHasher = 571;
  location = 572;
  M = 573;
  major = 574;
  makeAsyncIterator = 575;
  makeIterator = 576;
  mapEntry = 577;
  MapKeyType = 578;
  mapToMessages = 579;
  MapValueType = 580;
  mapVisitor = 581;
  maximumEdition = 582;
  mdayStart = 583;
  merge = 584;
  message = 585;
  messageDepthLimit = 586;
  messageEncoding = 587;
  MessageExtension = 588;
  MessageImplementationBase = 589;
  MessageOptions = 590;
  MessageSet = 591;
  messageSetWireFormat = 592;
  messageSize = 593;
  messageType = 594;
  Method = 595;
  MethodDescriptorProto = 596;
  MethodOptions = 597;
  methods = 598;
  min = 599;
  minimumEdition = 600;
  minor = 601;
  Mixin = 602;
  mixins = 603;
  modifier = 604;
  modify = 605;
  month = 606;
  msgExtension = 607;
  mutating = 608;
  n = 609;
  name = 610;
  NameDescription = 611;
  NameMap = 612;
  NamePart = 613;
  names = 614;
  nanos = 615;
  negativeIntValue = 616;
  nestedType = 617;
  newL = 618;
  newList = 619;
  newValue = 620;
  next = 621;
  nextByte = 622;
  nextFieldNumber = 623;
  nextVarInt = 624;
  nil = 625;
  nilLiteral = 626;
  noStandardDescriptorAccessor = 627;
  nullValue = 628;
  number = 629;
  numberValue = 630;
  objcClassPrefix = 631;
  of = 632;
  oneofDecl = 633;
  OneofDescriptorProto = 634;
  oneofIndex = 635;
  OneofOptions = 636;
  oneofs = 637;
  OneOf_Kind = 638;
  optimizeFor = 639;
  OptimizeMode = 640;
  Option = 641;
  OptionalEnumExtensionField = 642;
  OptionalExtensionField = 643;
  OptionalGroupExtensionField = 644;
  OptionalMessageExtensionField = 645;
  OptionRetention = 646;
  options = 647;
  OptionTargetType = 648;
  other = 649;
  others = 650;
  out = 651;
  outputType = 652;
  p = 653;
  package = 654;
  packed = 655;
  PackedEnumExtensionField = 656;
  PackedExtensionField = 657;
  padding = 658;
  parent = 659;
  parse = 660;
  path = 661;
  paths = 662;
  payload = 663;
  payloadSize = 664;
  phpClassPrefix = 665;
  phpMetadataNamespace = 666;
  phpNamespace = 667;
  pos = 668;
  positiveIntValue = 669;
  prefix = 670;
  preserveProtoFieldNames = 671;
  preTraverse = 672;
  printUnknownFields = 673;
  proto2 = 674;
  proto3DefaultValue = 675;
  proto3Optional = 676;
  ProtobufAPIVersionCheck = 677;
  ProtobufAPIVersion_3 = 678;
  ProtobufBool = 679;
  ProtobufBytes = 680;
  ProtobufDouble = 681;
  ProtobufEnumMap = 682;
  protobufExtension = 683;
  ProtobufFixed32 = 684;
  ProtobufFixed64 = 685;
  ProtobufFloat = 686;
  ProtobufInt32 = 687;
  ProtobufInt64 = 688;
  ProtobufMap = 689;
  ProtobufMessageMap = 690;
  ProtobufSFixed32 = 691;
  ProtobufSFixed64 = 692;
  ProtobufSInt32 = 693;
  ProtobufSInt64 = 694;
  ProtobufString = 695;
  ProtobufUInt32 = 696;
  ProtobufUInt64 = 697;
  protobuf_extensionFieldValues = 698;
  protobuf_fieldNumber = 699;
  protobuf_generated_isEqualTo = 700;
  protobuf_nameMap = 701;
  protobuf_newField = 702;
  protobuf_package = 703;
  protocol = 704;
  protoFieldName = 705;
  protoMessageName = 706;
  ProtoNameProviding = 707;
  protoPaths = 708;
  public = 709;
  publicDependency = 710;
  putBoolValue = 711;
  putBytesValue = 712;
  putDoubleValue = 713;
  putEnumValue = 714;
  putFixedUInt32 = 715;
  putFixedUInt64 = 716;
  putFloatValue = 717;
  putInt64 = 718;
  putStringValue = 719;
  putUInt64 = 720;
  putUInt64Hex = 721;
  putVarInt = 722;
  putZigZagVarInt = 723;
  pyGenericServices = 724;
  R = 725;
  rawChars = 726;
  RawRepresentable = 727;
  RawValue = 728;
  read4HexDigits = 729;
  readBytes = 730;
  register = 731;
  repeated = 732;
  RepeatedEnumExtensionField = 733;
  RepeatedExtensionField = 734;
  repeatedFieldEncoding = 735;
  RepeatedGroupExtensionField = 736;
  RepeatedMessageExtensionField = 737;
  repeating = 738;
  requestStreaming = 739;
  requestTypeURL = 740;
  requiredSize = 741;
  responseStreaming = 742;
  responseTypeURL = 743;
  result = 744;
  retention = 745;
  rethrows = 746;
  return = 747;
  ReturnType = 748;
  revision = 749;
  rhs = 750;
  root = 751;
  rubyPackage = 752;
  s = 753;
  sawBackslash = 754;
  sawSection4Characters = 755;
  sawSection5Characters = 756;
  scanner = 757;
  seconds = 758;
  self = 759;
  semantic = 760;
  Sendable = 761;
  separator = 762;
  serialize = 763;
  serializedBytes = 764;
  serializedData = 765;
  serializedSize = 766;
  serverStreaming = 767;
  service = 768;
  ServiceDescriptorProto = 769;
  ServiceOptions = 770;
  set = 771;
  setExtensionValue = 772;
  shift = 773;
  SimpleExtensionMap = 774;
  size = 775;
  sizer = 776;
  source = 777;
  sourceCodeInfo = 778;
  sourceContext = 779;
  sourceEncoding = 780;
  sourceFile = 781;
  span = 782;
  split = 783;
  start = 784;
  startArray = 785;
  startArrayObject = 786;
  startField = 787;
  startIndex = 788;
  startMessageField = 789;
  startObject = 790;
  startRegularField = 791;
  state = 792;
  static = 793;
  StaticString = 794;
  storage = 795;
  String = 796;
  stringLiteral = 797;
  StringLiteralType = 798;
  stringResult = 799;
  stringValue = 800;
  struct = 801;
  structValue = 802;
  subDecoder = 803;
  subscript = 804;
  subVisitor = 805;
  Swift = 806;
  swiftPrefix = 807;
  SwiftProtobufContiguousBytes = 808;
  syntax = 809;
  T = 810;
  tag = 811;
  targets = 812;
  terminator = 813;
  testDecoder = 814;
  text = 815;
  textDecoder = 816;
  TextFormatDecoder = 817;
  TextFormatDecodingError = 818;
  TextFormatDecodingOptions = 819;
  TextFormatEncodingOptions = 820;
  TextFormatEncodingVisitor = 821;
  textFormatString = 822;
  throwOrIgnore = 823;
  throws = 824;
  timeInterval = 825;
  timeIntervalSince1970 = 826;
  timeIntervalSinceReferenceDate = 827;
  Timestamp = 828;
  total = 829;
  totalArrayDepth = 830;
  totalSize = 831;
  trailingComments = 832;
  traversalOptions = 833;
  traverse = 834;
  true = 835;
  try = 836;
  type = 837;
  typealias = 838;
  TypeEnum = 839;
  typeName = 840;
  typePrefix = 841;
  typeStart = 842;
  typeUnknown = 843;
  typeURL = 844;
  UInt32 = 845;
  UInt32Value = 846;
  UInt64 = 847;
  UInt64Value = 848;
  UInt8 = 849;
  unchecked = 850;
  unicodeScalarLiteral = 851;
  UnicodeScalarLiteralType = 852;
  unicodeScalars = 853;
  UnicodeScalarView = 854;
  uninterpretedOption = 855;
  union = 856;
  uniqueStorage = 857;
  unknown = 858;
  unknownFields = 859;
  UnknownStorage = 860;
  unpackTo = 861;
  UnsafeBufferPointer = 862;
  UnsafeMutablePointer = 863;
  UnsafeMutableRawBufferPointer = 864;
  UnsafeRawBufferPointer = 865;
  UnsafeRawPointer = 866;
  unverifiedLazy = 867;
  updatedOptions = 868;
  url = 869;
  useDeterministicOrdering = 870;
  utf8 = 871;
  utf8Ptr = 872;
  utf8ToDouble = 873;
  utf8Validation = 874;
  UTF8View = 875;
  v = 876;
  value = 877;
  valueField = 878;
  values = 879;
  ValueType = 880;
  var = 881;
  verification = 882;
  VerificationState = 883;
  Version = 884;
  versionString = 885;
  visitExtensionFields = 886;
  visitExtensionFieldsAsMessageSet = 887;
  visitMapField = 888;
  visitor = 889;
  visitPacked = 890;
  visitPackedBoolField = 891;
  visitPackedDoubleField = 892;
  visitPackedEnumField = 893;
  visitPackedFixed32Field = 894;
  visitPackedFixed64Field = 895;
  visitPackedFloatField = 896;
  visitPackedInt32Field = 897;
  visitPackedInt64Field = 898;
  visitPackedSFixed32Field = 899;
  visitPackedSFixed64Field = 900;
  visitPackedSInt32Field = 901;
  visitPackedSInt64Field = 902;
  visitPackedUInt32Field = 903;
  visitPackedUInt64Field = 904;
  visitRepeated = 905;
  visitRepeatedBoolField = 906;
  visitRepeatedBytesField = 907;
  visitRepeatedDoubleField = 908;
  visitRepeatedEnumField = 909;
  visitRepeatedFixed32Field = 910;
  visitRepeatedFixed64Field = 911;
  visitRepeatedFloatField = 912;
  visitRepeatedGroupField = 913;
  visitRepeatedInt32Field = 914;
  visitRepeatedInt64Field = 915;
  visitRepeatedMessageField = 916;
  visitRepeatedSFixed32Field = 917;
  visitRepeatedSFixed64Field = 918;
  visitRepeatedSInt32Field = 919;
  visitRepeatedSInt64Field = 920;
  visitRepeatedStringField = 921;
  visitRepeatedUInt32Field = 922;
  visitRepeatedUInt64Field = 923;
  visitSingular = 924;
  visitSingularBoolField = 925;
  visitSingularBytesField = 926;
  visitSingularDoubleField = 927;
  visitSingularEnumField = 928;
  visitSingularFixed32Field = 929;
  visitSingularFixed64Field = 930;
  visitSingularFloatField = 931;
  visitSingularGroupField = 932;
  visitSingularInt32Field = 933;
  visitSingularInt64Field = 934;
  visitSingularMessageField = 935;
  visitSingularSFixed32Field = 936;
  visitSingularSFixed64Field = 937;
  visitSingularSInt32Field = 938;
  visitSingularSInt64Field = 939;
  visitSingularStringField = 940;
  visitSingularUInt32Field = 941;
  visitSingularUInt64Field = 942;
  visitUnknown = 943;
  wasDecoded = 944;
  weak = 945;
  weakDependency = 946;
  where = 947;
  wireFormat = 948;
  with = 949;
  withUnsafeBytes = 950;
  withUnsafeMutableBytes = 951;
  work = 952;
  Wrapped = 953;
  WrappedType = 954;
  wrappedValue = 955;
  written = 956;
  yday = 957;
}
